--- a/popup/src/components/search/search-menu.scss
+++ b/popup/src/components/search/search-menu.scss
@@ -1,5 +1,5 @@
 .search-menu {
-  padding: 0 24px 24px;
+  padding: 0 24px 24px 40px;
 
   & section {
     margin: 12px 0 24px;
@@ -23,7 +23,7 @@
   }
 }
 .search-result-symbol {
-  flex: 0 0 80px;
+  flex: 0 0 20%;
 }
 .search-result-company {
   overflow: hidden;
