add error handling for malformed api calls

--- a/popup/src/index.scss
+++ b/popup/src/index.scss
@@ -55,3 +55,7 @@ button, input, select, textarea {
   animation-name: fadeIn;
   animation: fadeIn 0.5s ease-out;
 }
+
+.error-message {
+  color: var(--st__semantic-error-base);
+}
