--- a/popup/src/components/search/search.scss
+++ b/popup/src/components/search/search.scss
@@ -1,6 +1,6 @@
 #search-form {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   color: var(--st__neutral-fg1);
 }
@@ -21,7 +21,7 @@
   margin-top: 8px;
   margin-bottom: 8px;
   padding: 0 4px 0 3px;
-  line-height: 250%;
+  line-height: 200%;
   background-color: inherit;
   color: inherit;
   border: none;
