--- a/popup/src/index.scss
+++ b/popup/src/index.scss
@@ -9,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   // overflow: hidden;
   height: 100%;
+  width: 400px;
 
   color: var(--st__neutral-fg1);
   background-color: var(--st__neutral-bg1);
