--- a/popup/src/components/lists/lists.scss
+++ b/popup/src/components/lists/lists.scss
@@ -2,6 +2,7 @@
   // background-color: var(--st__neutral-bg1);
   // padding: 4px 24px 0px;  
   border-color: var(--st__neutral-bg3);
+  font-size: 16px;
 
   h4 {
     color: var(--st__neutral-fg2);
@@ -14,6 +15,7 @@
     border-color: inherit;
     border-bottom-style: solid;
     border-bottom-width: 1px;
+    // padding: 0 10px 0 10px;
   }
 }
 
@@ -33,6 +35,7 @@
   border-bottom-style: solid;
   border-bottom-width: 1px;
   border-color: inherit;
+  padding-left: 10px;
 }
 
 .list-header-cell {
@@ -41,6 +44,12 @@
       fill: var(--st__neutral-fg2);
     }
   }
+}
+
+.list-title {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .list-controls {
