save open list status to settings

--- a/popup/src/index.scss
+++ b/popup/src/index.scss
@@ -60,3 +60,11 @@ button, input, select, textarea {
 .error-message {
   color: var(--st__semantic-error-base);
 }
+
+.positive {
+  color: var(--st__semantic-positive-base);
+}
+
+.negative {
+  color: var(--st__semantic-negative-base);
+}
