--- a/popup/src/components/lists/lists.scss
+++ b/popup/src/components/lists/lists.scss
@@ -59,6 +59,7 @@
 }
 
 .list-title {
+  display: flex;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -66,6 +67,7 @@
 
 .list-controls {
   display: flex;
+  align-items: center;
 
   div:not(:first-child) {
     margin-left: 10px;
@@ -86,4 +88,21 @@
   &>*:hover {
     fill: var(--st__primary-hover);
   }
+}
+
+.list-dropdown-toggle {
+ &:focus, &:active {
+    border: none;
+    outline: none;
+    box-shadow: none !important;
+  }
+}
+
+.list-dropdown-menu {
+}
+
+.list-edit-form {
+}
+.list-edit-form input {
+  background-color: var(--st__neutral-fg3);
 }
