--- a/popup/src/index.scss
+++ b/popup/src/index.scss
@@ -68,3 +68,23 @@ button, input, select, textarea {
 .negative {
   color: var(--st__semantic-negative-base);
 }
+
+// Bootstrap overrides
+.dropdown-header, .dropdown-item, .dropdown-menu {
+  color: var(--st__neutral-fg1);
+  background-color: var(--st__neutral-bg3);
+}
+
+.dropdown-menu {
+  box-shadow: 0px 1px 3px 0 var(--st__neutral-bg1);
+}
+
+.dropdown-item:hover {
+  color: var(--st__neutral-fg1);
+  background-color: var(--st__neutral-hover-bg1);
+  fill: var(--st__neutral-hover-bg1);
+}
+
+.dropdown-item span {
+  margin-right: 5px;
+}
