--- a/popup/src/components/lists/forms/list-form.scss
+++ b/popup/src/components/lists/forms/list-form.scss
@@ -16,7 +16,7 @@
 
 .list-form-controls {
   display: block;
-  // padding-left: 10px;
+  padding-right: 2px;
 
   button:first-child {
     // border-right: 1px solid var(--st__neutral-hover-bg1);
@@ -25,7 +25,7 @@
   button:not(:first-child) {
     // margin-left: 20px;
     // border-left: 1px solid var(--st__neutral-hover-bg1);
-    padding-left: 20px;
+    padding-left: 12px;
     padding-right: 2px;
   }
 }
