--- a/popup/src/index.scss
+++ b/popup/src/index.scss
@@ -10,7 +10,8 @@ body {
   // overflow: hidden;
   height: 100%;
   width: 400px;
-
+  margin: 0 auto;
+  
   color: var(--st__neutral-fg1);
   background-color: var(--st__neutral-bg1);
 }
