--- a/popup/src/components/standalone.module.scss
+++ b/popup/src/components/standalone.module.scss
@@ -1,10 +1,11 @@
 .body {
   background-color: var(--st__neutral-fg1);
   color: var(--st__neutral-bg1);
-  margin: 0 auto;
-  padding: 0;
+  margin: 0;
+  padding: 0 10px 0 0;
   display: flex;
   align-items: center;
+  min-height: 900px;
 
   p {
     margin: 0 auto;
@@ -12,7 +13,20 @@
   }
 }
 
+.main {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  p {
+    font-size: 16px;
+  }
+}
+
 .panel {
-  box-shadow: 0px 1px 6px 0 var(--st__neutral-bg1);
-  // padding: 10px 2px 10px 0;
+  background-color: var(--st__neutral-bg1);
+  color: var(--st__neutral-fg1);
+  box-shadow: 0px 2px 6px 0 var(--st__neutral-bg2);
+  padding-bottom: 20px;
 }
