--- a/popup/src/components/standalone.module.scss
+++ b/popup/src/components/standalone.module.scss
@@ -21,7 +21,7 @@
   box-shadow: 0px 2px 6px 0 var(--st__neutral-bg2);
   padding-bottom: 20px;
   margin: 10px 0 50px;
-  text-align: center;
+  // text-align: center;
 }
 
 .settings {
